# thedigiquarium

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DAEMON_SPEC.md  FUTURE_TANKS_SPEC.md  INFRASTRUCTURE.md  LICENSE  MILESTONES.md  PROJECT_README.md  PROJECT_SPECIFICATION.md  README.md  VISITOR_TANK_SPEC.md  WEBSITE_SPEC.md  archive-gen1.sh  docker-compose.experimental.yml  docker-compose.experiments.yml  docker-compose.visitor.yml  docker-compose.yml  sitemap.xml
audits/: COMPREHENSIVE_AUDIT_20260223_0423.md  REALITY_CHECK_20260223_0351.md  together_api_test_20260331.md  website_audit_20260220_1845.md  website_audit_20260221_1844.md  website_audit_20260222_0138.md  website_audit_20260222_0215.md
caretaker/: INSTALL_NOW.sh  caretaker.py  caretaker.py.bak.20260222012444  caretaker_v2.py  digiquarium-caretaker.service  install-service.sh  run_caretaker.sh  start-caretaker.sh
chat-ui/: admin_api.py  app.py  requirements.txt  start.sh
config/: alerts.json  seccomp-tank.json  voices.json
configs/: seed_prompts.py
congregations/: orchestrator.py
daemons/: admin_status_generator.py  daemon_supervisor.py  status_reporter.py
discord/: DISCORD_SETUP.md
docs/: 404.html  AUDIT_REPORT_20260220.md  BASELINE_COMPARISON_FINAL_2026-02-20.md  BASELINE_COMPARISON_REPORT_2026-02-20.md  BASELINE_PROCESS.md  CNAME  DAEMON_AUDIT.md  DIGIQUARIUM_JOURNEY.md  DIGIQUARIUM_JOURNEY_LOG.md  EVOLUTION.md  INCIDENT_REPORT_2026-02-21.md  JOURNEY_LOG.md  MODEL_COMPARISON_RESULTS.md  REMEDIATION_PLAN.md  SECURITY_ARCHITECTURE.md  SETUP.md  TANK_MANIFEST.md  changelog.html  index.html  robots.txt  sitemap.xml  start.html
guard/: guard.py  run_guard.sh
interventions/: adam_dream_2026-02-21.json  eve_orange_2026-02-21.json  observer_orange_2026-02-21.json  seeker_orange_2026-02-21.json
marketing/: brand_guidelines.json
mcp-server/: claude_desktop_config.json  run-mcp.sh  server.py  server.py.save  server.py.save.1  start-mcp.sh
memory_banks/: TEMPLATE.json
notes/: bpx-ianc-apj-2026-02-23-summary.md  bpx-ianc-apj-2026-02-23.json
operations/: baseline_queue.json  orchestrator.py  scheduler.py
proposed-aquarium/: ARCHITECTURE.md  Cargo.toml  PLAN.md
proposed-aquarium/crates/aquarium-core/: Cargo.toml
proposed-aquarium/crates/aquarium-core/src/: inference.rs  lib.rs  prompt.rs  specimen.rs  tool.rs
proposed-aquarium/crates/inference-local/: Cargo.toml
proposed-aquarium/crates/inference-local/src/: candle_backend.rs  lib.rs  ollama.rs
proposed-aquarium/crates/inference-remote/: Cargo.toml
proposed-aquarium/crates/inference-remote/src/: client.rs  error.rs  lib.rs  provider.rs  rate_limit.rs  router.rs  stream.rs  types.rs
proposed-aquarium/crates/knowledge/: Cargo.toml
proposed-aquarium/crates/knowledge/src/: article.rs  lib.rs  rank_fusion.rs  semantic.rs  text_search.rs  tokenizer.rs
proposed-aquarium/crates/specimen-loop/: Cargo.toml
proposed-aquarium/crates/specimen-loop/src/: conversation.rs  intent.rs  lib.rs  main.rs  prompts.rs  selection.rs  trace.rs
proposed-aquarium/traces/: demo-adam.json  demo-adam.jsonl  demo.md
protocols/: orange_protocol.json
scripts/: adam_post_exploration_baseline.py  archive-logs.sh  baseline_all.sh  baseline_final.sh  (+57 more)
(+4390 files in other folders)
