[workspace]
resolver = "2"
members = [
    "crates/aquarium-core",
    "crates/inference-local",
    "crates/inference-remote",
    "crates/knowledge",
    "crates/specimen-loop",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Inference - local (Candle on Metal)
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = "0.21"

# Inference - remote
reqwest = { version = "0.12", features = ["json"] }

# Knowledge / embeddings
tessera = { package = "tessera-embeddings", path = "../../deno_rust/tessera", features = ["metal"] }  # Tom's embedding library
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
aquarium-core = { path = "crates/aquarium-core" }
inference-local = { path = "crates/inference-local" }
inference-remote = { path = "crates/inference-remote" }
knowledge = { path = "crates/knowledge" }
specimen-loop = { path = "crates/specimen-loop" }

# Tom's candle fork with JinaBERT Code, Qwen2/3 embeddings, and Metal fixes.
# Required for Tessera compatibility.
[patch.crates-io]
candle-core = { git = "https://github.com/tomWhiting/candle.git", rev = "b014c086" }
candle-nn = { git = "https://github.com/tomWhiting/candle.git", rev = "b014c086" }
candle-transformers = { git = "https://github.com/tomWhiting/candle.git", rev = "b014c086" }
