[package]
name = "knowledge"
version.workspace = true
edition.workspace = true

[features]
default = []
semantic = ["dep:tessera"]

[dependencies]
aquarium-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
rand = { workspace = true }
tessera = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
